# VWP

./: Doxyfile  Map Editor.lnk  Thumbs.db  VWP-Windowed.exe.lnk  VWP.exe.bak  bangai  src.kdevelop.pcs  stderr.txt  stdout.txt  strace
docs/: B-HNC-level layout.sxw  B-HNC_AD.sxw  B-HNC_DS.sxw  B_HNC-game_specs.sxw  Bangai-HNC_DD.sxw
images/: core1.png.bak  paletteswap
maps/: chaos.amp  newmap.amp  newmap.amp.old  plunge.amp  testmap.amp  testmap.map
src/: Makefile  Makefile.am  Makefile.old  Makefile~  audio.c  audio.c~  audio.h  audio.h~  command.c  entity.c  entity.c~  entity.h  entity.h~  font.c  font.c~  game.c  game.c~  game.h  graphics.c  graphics.c~  graphics.h  graphics.h~  makefile.dep  makefile.dep~  mechs.c~  mechs.h~  menu.c  menu.c~  menu.h  menu.h~  network.c  network.h  particle.c  particle.c~  particle.h  particle.h~  player.c  player.c~  player.h  player.h~  (+35 more)
src/Release/: command.sbr  flamedart.sbr  src.bsc  src.pch  vc60.idb
