_SOURCES = flamedart.c
_SOURCES = flamedart.c projectiles.h
_SOURCES = projectiles.c
_SOURCES = particle.h
_SOURCES = particle.h particle.c
_SOURCES = game.h
_SOURCES = player.h
_SOURCES = player.h player.c
_SOURCES = projectiles.c
_SOURCES = mechs.h
_SOURCES = mechs.h mechs.c
_SOURCES = weapons.h
_SOURCES = weapons.h weapons.c
_SOURCES = worldents.h
_SOURCES = worldents.h worldents.c
_SOURCES = menu.h
_SOURCES = menu.c
_SOURCES = spawns.c
_SOURCES = spawn.h
_SOURCES = spawn.h spawn.c
